# bgn

./: .gitignore  CMakeLists.txt  CMakeSettings.json
bign/: CMakeLists.txt
bign/include/bign/: API.h  bign.h  op.h
bign/source/: add.c  bign.c  cmp.c  div.c  mul.c
tests/: CMakeLists.txt  main.c
